# linear-free

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  fourmolu.yaml  linear-free.cabal
src/Control/Applicative/Free/: Linear.hs
src/Control/Linear/Applicative/: Free.hs
src/Control/Linear/Monad/: Free.hs
src/Control/Linear/Monad/Free/: Church.hs
src/Control/Monad/Free/: Linear.hs
test/: Main.hs
