cabal-version:      3.0
name:               linear-free
version:            0.1.0.0
synopsis:           Linear free monads
license:            MIT
license-file:       LICENSE
author:             Joosep Jääger
maintainer:         joosep.jaager@gmail.com
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Control.Monad.Free.Linear
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.20.0.0,
      linear-base,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite linear-free-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        containers,
        hspec,
        linear-base,
        linear-free,
        QuickCheck
