cabal-version:      3.0
name:               linear-free
version:            0.1.0.0
synopsis:           Linear free monads
description:        
  This package implements free monads on top of `linear-base`. Linear free monads 
  are useful to implement domain specific languages that for example have to 
  keep track of resources.
license:            MIT
license-file:       LICENSE
author:             Joosep Jääger
maintainer:         joosep.jaager@gmail.com
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/Soupstraw/linear-free.git

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Control.Monad.Free.Linear
    build-depends:    
      base >=4.16 && <5,
      linear-base ^>=0.5,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite linear-free-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      base >=4.16 && <5,
      containers,
      hspec,
      linear-base,
      linear-free,
      QuickCheck
